--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>Seleksi Warga BasDat</title>
 
       <!-- Bootstrap -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/bootstrap.css" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,31 +18,40 @@
    	</head>
    	<body background="images/bg.jpg">
     	<div id="header">
-    		<p id="judul">Data Visualization</p>
+    		<span id="judul">Data Visualization</span>
       	</div>
   		<div class="content">
-  			<p class="headline">
+  			<div class="headline">
   				Latar Belakang
-  			</p>
+  			</div>
   			<p class="isi">
   				Polusi sudah bukan menjadi rahasia lagi sebagai masalah pelik yang solusinya masih terus dikaji oleh para ahli. Kebanyakan polusi berasal dari kendaraan bermotor yang merupakan sisa hasil pembakaran bahan bakar fosil. Salah satu inovasi yang sedang dikembangkan untuk mengatasi masalah polusi ini yaitu dengan memanfaatkan energi listrik.<br><br>
-				Energi listrik sendiri bisa didapatkan dari sumber energi yang terbarukan maupun tidak. Energi terbarukan yang sedang marak – maraknya diperbincangkan yaitu energi yang berasal dari matahari, energi gelombang, energi tekanan arus dasar laut, dll. Dengan energi terbarukan tersebut maka listrik bisa diproduksi tanpa menghasilkan polusi yang besar seperti bagaimana dihasilkan dari sumber energi tak terbarukan.
+				  Energi listrik sendiri bisa didapatkan dari sumber energi yang terbarukan maupun tidak. Energi terbarukan yang sedang marak – maraknya diperbincangkan yaitu energi yang berasal dari matahari, energi gelombang, energi tekanan arus dasar laut, dll. Dengan energi terbarukan tersebut maka listrik bisa diproduksi tanpa menghasilkan polusi yang besar seperti bagaimana dihasilkan dari sumber energi tak terbarukan.
   			</p>
   		</div>
 
   		<div class="content">
-  			<p class="headline">
+  			<div class="headline">
   				Visualization
-  			</p>
+  			</div>
   			<p class="isi">
   				-- ini tempat chartsnya --
   			</p>
   		</div>
 
+      <div class="">
+        <div class="headline">
+          About
+        </div>
+        <p class="isi">
+
+        </p>
+      </div>
+
   		<div class="content">
-  			<p class="headline">
+  			<div class="headline">
   				About
-  			</p>
+  			</div>
   			<p class="isi">
 
   			</p>
